# swoop

./: .gitignore  README.md  pyproject.toml
swoop/: __init__.py  session.py
